--- a/styles/screen.css
+++ b/styles/screen.css
@@ -1,16 +1,16 @@
 body {
-    font-family: Helvetica, sans-serif;
-    color: #EAE8FF;
-    background: #2D3142;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: #000000; 
     padding: 0 40px;
     text-align: center;
+    line-height: 1.6;
 }
 
 nav {
     margin: 40px auto 0 auto;
     width: 250px;
     border-radius: 50px;
-    background: #212431;
+    background: #252A3A; 
 }
 
 nav ul {
@@ -28,24 +28,94 @@ nav ul li {
 nav ul li a {
     display: inline-block;
     padding: 20px;
-    color: #EAE8FF;
+    color: #ff006e; 
     text-decoration: none;
     font-size: 1.2em;
+    transition: background-color 0.3s ease; 
+}
+
+nav ul li a:hover {
+    background-color: #FFBE0B; 
+    border-radius: 25px; 
 }
 
 h1 {
-    font-size: 8em;
-    letter-spacing: -2px;
-}
-
-h1 strong {
-    background: rgb(34,193,195);
-    background: linear-gradient(45deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
+    font-size: 3rem;
+    color: #1B1E2B; 
+    padding: 10px 20px;
+    border-radius: 25px;
+    display: inline-block;
+    background-image: linear-gradient(
+        90deg, 
+        #ffbe0b, /* Vivid yellow */
+        #fb5607, /* Strong orange */
+        #FF006E, /* Bright pink */
+        #8338EC, /* Deep purple */
+        #3A86FF  /* Bright blue */
+    );
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
+    box-shadow: none; 
 }
 
 
-img.about {
-    opacity: 0.5;
+h2 {
+    font-size: 1.5rem;
+    color: #1B1E2B; 
+    background-color: #FFBE0B; 
+    padding: 10px 20px; 
+    border-radius: 25px; 
+    display: inline-block; 
+    margin: 20px 0; 
 }
+
+
+h3 {
+    color: #FF006E; 
+    margin-top: 1.25rem;
+    margin-bottom: 1rem;
+}
+
+h4 { 
+    color: #fb5607; 
+    margin-top: 1.5rem;
+    margin-bottom: 1rem;
+
+}
+
+p {
+    margin-bottom: 1rem;
+}
+
+a {
+    color: #ff006e; /* Bright blue for links */
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+a:hover {
+    color: #FB5607; 
+    text-decoration: underline;
+}
+
+ul, ol {
+    margin-bottom: 1rem;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+}
+
+
+.homepage-logo img {
+    max-width: 100px;
+    display: block;
+    margin: 0 auto;
+    padding-top: 25px;
+    align-content: center;
+  }
+  
