--- a/index.liquid
+++ b/index.liquid
@@ -8,7 +8,14 @@ title: 11ty Boilerplate
 <ul>
   {% for post in collections.posts %}
     <li>
-      <a href="{{ post.url }}">{{ post.data.title }}</a>
+      <a href="{{ post.url }}" class ="icon">
+        <i class="fas fa-arrow-right"></i> 
+        {{ post.data.title }}
+      </a>
     </li>
   {% endfor %}
 </ul>
+
+<div class="homepage-logo">
+  <img src="images/Untitled.png" alt="Logo">
+</div>
